# DisCODe

Tasks/: MovieViewer.xml  SequenceViewer.xml  TriggeredSequenceViewer.xml
Tasks/KW/: CalcCov.xml  DetekcjaSkory.xml  DetekcjaSkory1.xml  DetekcjaSkory2.xml  DetekcjaSkory3YCbCr.xml
Tmp/: TSL  TSL.cpp  tsl.txt
share/Tasks/: CMakeLists.txt  CameraOpenCVViewer.xml  MovieViewer.xml  MovieWriter.xml
share/Tasks/KW/: AdjustSkinDetection.xml  AdjustSkinDetection2.xml  CalcCov.xml  DetekcjaSkory2.xml  DetekcjaSkoryTSL.xml  DetekcjaSkoryTSL2.xml  DetekcjaSkoryTSL2OpenClose.xml  DetekcjaSkory_TSL.xml  InitialFiltr.xml  InitialFiltr2.xml  MAP.xml  MAP2_Samples.xml  MAP2_Sequence.xml  MAP2_Test.xml  MAP3_AdjustSkinDetection_Sequence.xml  MAP3_Sequence.xml  MAP3_Test.xml  MAP_Sequence.xml  MAP_Test.xml  MAP_Test2.xml  SkinDetectionAkademik.xml
share/Tasks/MB/: pb_chessboard_home.xml
src/Common/: ScopeLogger.hpp
src/Processors/: CMakeLists.txt
src/Processors/BlobExtractor/: BlobExtractor_Processor.cpp  BlobExtractor_Processor.hpp
src/Processors/CvColorConv/: CvColorConv_Processor.cpp
src/Processors/KW_Increase_Contrast/: CMakeLists.txt  KW_Increase_Contrast.cpp  KW_Increase_Contrast.hpp
src/Processors/KW_InitialFilter2/: CMakeLists.txt  KW_InitialFilter2.cpp  KW_InitialFilter2.hpp
src/Processors/KW_InitialFilterAkademik/: KW_InitialFilterAkademik.cpp
src/Processors/KW_InitialFilterAkademik_TK/: KW_InitialFilterAkademik.cpp
src/Processors/KW_Initial_Filter/: CMakeLists.txt  (+2 more)
src/SDK/: CMakeLists.txt
src/Types/: Drawable.hpp  Ellipse.hpp  Line.hpp
(+45 files in other folders)
